<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypelayout="1.0"?>
<package format="3">
  <name>pointcloud_localization</name>
  <version>1.0.0</version>
  <description>PX4 drone point cloud capture and localization</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>velodyne_msgs</depend>
  <depend>velodyne_driver</depend>
  <depend>velodyne_pointcloud</depend>
</package>
